--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -2,6 +2,15 @@ html,
 body {
 	height: 100%;
 }
+/* font-family: 'Montserrat', sans-serif;
+font-family: 'Open Sans', sans-serif; */
+body{
+	font-family: 'Open Sans', sans-serif;
+	font-size: 16px;
+	line-height: 27px;
+	font-weight: 400;
+	color: $default;
+}
 
 .wrapper {
 	display: flex;
@@ -17,7 +26,7 @@ body {
 }
 
 .container{
-  max-width: 1200px;
+  max-width: 1140px;
   margin: 0 auto;
   padding: 0 15px;
 }
