--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -148,12 +148,64 @@
         }
     }
 
-    &__menu-link {}
 
     &__copyright {
         background-color: $title;
         color: #a1a1a1;
         text-align: center;
         padding: 42px 0px 41px;
+        padding-top: 40px;
+    }
+}
+
+.rightside-menu {
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    max-width: 694px;
+    width: 100%;
+    background-color: #fff;
+    padding-top: 40px;
+    box-shadow: -2px 3px 17px 0px #000;
+    transition: all .3s;
+  
+    &.rightside-menu--close{
+        transform: translateX(300%);
+
+    }
+    &__close {
+        background-color: transparent;
+        border: none;
+        padding: 0;
+        cursor: pointer;
+        margin-left: 50px;
+        margin-bottom: 60px;
+    }
+
+    &__content {
+        text-align: center;
+        max-width: 485px;
+        margin: 0 auto;
+    }
+
+    &__logo {
+        display: inline-block;
+        margin-bottom: 40px;
+    }
+
+    &__title {
+        color: $title;
+        @extend %title-font;
+        font-size: 36px;
+        line-height: 51px;
+    }
+
+    &__text {
+        margin-bottom: 75px;
+    }
+
+    &__images{
+        max-width: 485px;
     }
 }
