--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -2,9 +2,10 @@ html,
 body {
 	height: 100%;
 }
+
 /* font-family: 'Montserrat', sans-serif;
 font-family: 'Open Sans', sans-serif; */
-body{
+body {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 16px;
 	line-height: 27px;
@@ -22,17 +23,40 @@ body{
 .main {
 	flex: 1 0 auto;
 }
+
 .footer {
 	flex: 0 0 auto;
 }
 
-.container{
-  max-width: 1140px;
-  margin: 0 auto;
-  padding: 0 15px;
+.container {
+	max-width: 1140px;
+	margin: 0 auto;
+	padding: 0 15px;
 }
 
+.slick-dots {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 
+	li {
+		margin: 0 15px;
+	}
 
+	button {
+		background-color: $title;
+		border: none;
+		width: 8px;
+		height: 8px;
+		border-radius: 50%;
+		padding: 0;
+		font-size: 0;
+	}
 
-
+	li.slick-active {
+		button {
+			background-color: #FFEF35;
+			
+		}
+	}
+}
