--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -169,11 +169,13 @@
     padding-top: 40px;
     box-shadow: -2px 3px 17px 0px #000;
     transition: all .3s;
-  
-    &.rightside-menu--close{
+    z-index: 10;
+
+    &.rightside-menu--close {
         transform: translateX(300%);
 
     }
+
     &__close {
         background-color: transparent;
         border: none;
@@ -199,13 +201,89 @@
         @extend %title-font;
         font-size: 36px;
         line-height: 51px;
+        position: relative;
+        padding-bottom: 17px;
+        margin-bottom: 17px;
+
+        &::after {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            max-width: 252px;
+            height: 1px;
+            background-color: #979797;
+            left: 0;
+            right: 0;
+            margin: 0 auto;
+        }
     }
 
     &__text {
         margin-bottom: 75px;
     }
 
-    &__images{
+    &__images {
         max-width: 485px;
     }
+}
+
+.top {
+    &__inner {
+        padding-bottom: 70px;
+        position: relative;
+
+        &::after {
+            content: "";
+            position: absolute;
+            background-image: url(../images/slider-bg.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
+            width: 100%;
+            height: 722px;
+            top: 0;
+            z-index: -1;
+        }
+    }
+
+    &__slider-item {
+        display: flex !important;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &__slider-info {
+        max-width: 645px;
+        margin-left: 25px;
+    }
+
+    &__slider-img {
+        margin-left: -14%;
+        max-width: 703px;
+        height: 815px;
+        object-fit: cover;
+    }
+
+    &__slider-title {
+        color: $title;
+        font-size: 110px;
+        line-height: 135px;
+        padding-bottom: 26px;
+        margin-bottom: 26px;
+        position: relative;
+
+        &::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            width: 185px;
+            height: 1px;
+            background-color: #6d7282;
+        }
+    }
+
+    &__slider-text {
+        max-width: 585px;
+    }
+
 }
